2014-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/sh-script.el (sh-smie-sh-rules): For { after &&, don't
	align with the surrounding parent (bug#17721).

2014-06-20  Eli Zaretskii  <eliz@gnu.org>

	* textmodes/texinfo.el (texinfo-mode): Set skeleton-end-newline
	locally to nil.
	(texinfo-insert-block, texinfo-insert-@end)
	(texinfo-insert-@example, texinfo-insert-@quotation): Adjust to
	local setting of skeleton-end-newline by adding an explicit \n to
	the skeletons where appropriate.  (Bug#17801)

2014-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie--hanging-eolp-function): New var.
	(smie-indent--hanging-p): Use it.
	* progmodes/sh-script.el (sh-set-shell): Set it (bug#17621).

2014-06-20  Leo Liu  <sdl.web@gmail.com>

	* simple.el (read-quoted-char): Don't let help chars pop up help
	buffer.  (Bug#16617)

2014-06-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/sh-script.el (sh-smie-sh-rules): Use same rule for && as
	for | (bug#17621).

2014-06-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xt-mouse.el (xterm-mouse-translate-1): Fix last change (bug#17776).
	(xterm-mouse--read-event-sequence-1000): Drop unknown events instead of
	burping.

2014-06-18  Eli Zaretskii  <eliz@gnu.org>

	* term/w32-win.el (dynamic-library-alist): Support giflib 5.1.0
	and later.  (Bug#17790)

2014-06-18  Juri Linkov  <juri@jurta.org>

	* dired.el (dired-mark-pop-up): Let-bind display-buffer-mark-dedicated
	to `soft'.  (Bug#17554)

2014-06-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* delsel.el (electric-newline-and-maybe-indent): Mark it as well
	(bug#17737).

2014-06-16  Dmitry  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-font-lock-keywords): Don't fontify
	`!' in `!~' with `font-lock-negation-char-face'.  (Bug#17732)

2014-06-15  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-call-method): Push only non D-Bus events into
	`unread-command-events'.

2014-06-14  Glenn Morris  <rgm@gnu.org>